test/TestPhases/typechecker/valid/voidReturnFromVoidActivity.blc
activity rrr(a: bool)
    await true
    if a then
        return
    else // wait once more
        await true
    end
    await true
end

@[EntryPoint]
activity start ()()
    run rrr(true)
end